--- a/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGeneratedNet46/latest/AnalyticsAPIGeneratedNet46.csproj
+++ b/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGeneratedNet46/latest/AnalyticsAPIGeneratedNet46.csproj
@@ -1,18 +1,14 @@
 ﻿ <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-      <OutputType>Library</OutputType>
-      <TargetFrameworks>net46</TargetFrameworks>
-      <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
-      <Platforms>x64</Platforms>
-      <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
-      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <TargetFramework>net46</TargetFramework>
     </PropertyGroup>
  <ItemGroup>
-     <PackageReference Include="AmbrosiaLibCS" Version="2018.12.6.3" />
+     <PackageReference Include="AmbrosiaLibCS" Version="2018.12.12.1" />
+     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
      <PackageReference Include="Mono.Options.Core" Version="1.0.0" />
+     <PackageReference Include="Remote.Linq" Version="5.8.1" />
      <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
      <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
-     <PackageReference Include="Trill" Version="2018.3.2.1" />
      <ProjectReference Include="..\..\..\TwitterObservable\TwitterObservable.csproj" />
      <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0=" />
     </ItemGroup>
