Add tty and stdin to containers in the AKS scripts

--- a/Samples/AKS-scripts/ScriptBits/lartemplate.yml
+++ b/Samples/AKS-scripts/ScriptBits/lartemplate.yml
@@ -19,6 +19,8 @@ spec :
             containers:
             - name : #DEPLOYMENTNAME#
               image : #FULLCONTAINERNAME#
+              tty: true
+              stdin: true
               ports:
               - containerPort: #COORDPORT#
                 name: craport
