--- a/Samples/HelloWorld/Client2/Client2.csproj
+++ b/Samples/HelloWorld/Client2/Client2.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
@@ -11,8 +11,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.192" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\GeneratedSourceFiles\Client2Interfaces\latest\Client2Interfaces.csproj" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+    <ProjectReference Include="..\GeneratedSourceFiles\Client2InterfacesNetCore\latest\Client2InterfacesNetCore.csproj" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
+    <ProjectReference Include="..\GeneratedSourceFiles\Client2InterfacesNet46\latest\Client2InterfacesNet46.csproj" />
   </ItemGroup>
 
 </Project>
