Added Debug Type and Debug Symbols to the AmbrosiaLibCS proj to get pdbs in the Nuget package to fix issue with .net core and 3rd party code

--- a/Clients/CSharp/AmbrosiaLibCS/AmbrosiaLibCS.csproj
+++ b/Clients/CSharp/AmbrosiaLibCS/AmbrosiaLibCS.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
+    <DebugType>pdbonly</DebugType>
+    <DebugSymbols>true</DebugSymbols>
     <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <Platforms>x64</Platforms>
