--- a/InternalImmortals/PerformanceTest/Client/Job.csproj
+++ b/InternalImmortals/PerformanceTest/Client/Job.csproj
@@ -26,12 +26,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Clients\CSharp\AmbrosiaLibCS\AmbrosiaLibCS.csproj" />    
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
-    <ProjectReference Include="..\GeneratedSourceFiles\PTAmbrosiaGeneratedAPINetCore\latest\PTAmbrosiaGeneratedAPINetCore.csproj" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
-    <ProjectReference Include="..\GeneratedSourceFiles\PTAmbrosiaGeneratedAPINet46\latest\PTAmbrosiaGeneratedAPINet46.csproj" />
+    <ProjectReference Include="..\..\..\Clients\CSharp\AmbrosiaLibCS\AmbrosiaLibCS.csproj" />
+    <ProjectReference Include="..\GeneratedSourceFiles\PTAmbrosiaGeneratedAPI\latest\PTAmbrosiaGeneratedAPI.csproj" />    
   </ItemGroup>
 </Project>
