--- a/InternalImmortals/PerformanceTest/Server/Server.csproj
+++ b/InternalImmortals/PerformanceTest/Server/Server.csproj
@@ -23,11 +23,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Clients\CSharp\AmbrosiaLibCS\AmbrosiaLibCS.csproj" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
-    <ProjectReference Include="..\GeneratedSourceFiles\PTAmbrosiaGeneratedAPINetCore\latest\PTAmbrosiaGeneratedAPINetCore.csproj" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
-    <ProjectReference Include="..\GeneratedSourceFiles\PTAmbrosiaGeneratedAPINet46\latest\PTAmbrosiaGeneratedAPINet46.csproj" />
+    <ProjectReference Include="..\GeneratedSourceFiles\PTAmbrosiaGeneratedAPI\latest\PTAmbrosiaGeneratedAPI.csproj" />
   </ItemGroup>
 </Project>
