--- a/Samples/StreamingDemo/GeneratedSourceFiles/DashboardAPIGenerated/latest/DashboardAPIGenerated.csproj
+++ b/Samples/StreamingDemo/GeneratedSourceFiles/DashboardAPIGenerated/latest/DashboardAPIGenerated.csproj
@@ -1,19 +1,13 @@
  <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net46</TargetFramework>
+        <TargetFrameworks>net46</TargetFrameworks>
     </PropertyGroup>
- <ItemGroup>
+ <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
      <Reference Include="AmbrosiaLibCS">
             <HintPath>../../CodeGenDependencies/net46/AmbrosiaLibCS.dll</HintPath>
         </Reference>
-     <Reference Include="Aqua">
-            <HintPath>../../CodeGenDependencies/net46/Aqua.dll</HintPath>
-        </Reference>
-     <Reference Include="CRA.ClientLibrary">
-            <HintPath>../../CodeGenDependencies/net46/CRA.ClientLibrary.dll</HintPath>
-        </Reference>
-     <Reference Include="Microsoft.Azure.KeyVault.Core">
-            <HintPath>../../CodeGenDependencies/net46/Microsoft.Azure.KeyVault.Core.dll</HintPath>
+     <Reference Include="AnalyticsAPI">
+            <HintPath>../../CodeGenDependencies/net46/AnalyticsAPI.dll</HintPath>
         </Reference>
      <Reference Include="Microsoft.CodeAnalysis.CSharp">
             <HintPath>../../CodeGenDependencies/net46/Microsoft.CodeAnalysis.CSharp.dll</HintPath>
@@ -27,26 +21,26 @@
      <Reference Include="Microsoft.CodeAnalysis.Scripting">
             <HintPath>../../CodeGenDependencies/net46/Microsoft.CodeAnalysis.Scripting.dll</HintPath>
         </Reference>
+     <Reference Include="Microsoft.StreamProcessing.Common">
+            <HintPath>../../CodeGenDependencies/net46/Microsoft.StreamProcessing.Common.dll</HintPath>
+        </Reference>
+     <Reference Include="Microsoft.StreamProcessing">
+            <HintPath>../../CodeGenDependencies/net46/Microsoft.StreamProcessing.dll</HintPath>
+        </Reference>
+     <Reference Include="Microsoft.StreamProcessing.Serializer">
+            <HintPath>../../CodeGenDependencies/net46/Microsoft.StreamProcessing.Serializer.dll</HintPath>
+        </Reference>
      <Reference Include="Microsoft.VisualStudio.Threading">
             <HintPath>../../CodeGenDependencies/net46/Microsoft.VisualStudio.Threading.dll</HintPath>
         </Reference>
      <Reference Include="Microsoft.VisualStudio.Validation">
             <HintPath>../../CodeGenDependencies/net46/Microsoft.VisualStudio.Validation.dll</HintPath>
         </Reference>
-     <Reference Include="Microsoft.WindowsAzure.Storage">
-            <HintPath>../../CodeGenDependencies/net46/Microsoft.WindowsAzure.Storage.dll</HintPath>
-        </Reference>
-     <Reference Include="Mono.Options.Core">
-            <HintPath>../../CodeGenDependencies/net46/Mono.Options.Core.dll</HintPath>
-        </Reference>
      <Reference Include="Newtonsoft.Json">
             <HintPath>../../CodeGenDependencies/net46/Newtonsoft.Json.dll</HintPath>
         </Reference>
-     <Reference Include="Remote.Linq">
-            <HintPath>../../CodeGenDependencies/net46/Remote.Linq.dll</HintPath>
-        </Reference>
      <Reference Include="System.AppContext">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.AppContext/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.AppContext.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.AppContext/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.AppContext.dll</HintPath>
         </Reference>
      <Reference Include="System.Collections.Immutable">
             <HintPath>../../CodeGenDependencies/net46/System.Collections.Immutable.dll</HintPath>
@@ -55,7 +49,7 @@
             <HintPath>../../CodeGenDependencies/net46/System.Console.dll</HintPath>
         </Reference>
      <Reference Include="System.Diagnostics.FileVersionInfo">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Diagnostics.FileVersionInfo/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Diagnostics.FileVersionInfo.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Diagnostics.FileVersionInfo/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Diagnostics.FileVersionInfo.dll</HintPath>
         </Reference>
      <Reference Include="System.Diagnostics.StackTrace">
             <HintPath>../../CodeGenDependencies/net46/System.Diagnostics.StackTrace.dll</HintPath>
@@ -69,23 +63,32 @@
      <Reference Include="System.IO.FileSystem.Primitives">
             <HintPath>../../CodeGenDependencies/net46/System.IO.FileSystem.Primitives.dll</HintPath>
         </Reference>
+     <Reference Include="System.Reactive">
+            <HintPath>../../CodeGenDependencies/net46/System.Reactive.dll</HintPath>
+        </Reference>
+     <Reference Include="System.Reactive.Linq">
+            <HintPath>../../CodeGenDependencies/net46/System.Reactive.Linq.dll</HintPath>
+        </Reference>
      <Reference Include="System.Reflection.Metadata">
             <HintPath>../../CodeGenDependencies/net46/System.Reflection.Metadata.dll</HintPath>
         </Reference>
+     <Reference Include="System.Runtime.CompilerServices.Unsafe">
+            <HintPath>../../CodeGenDependencies/net46/System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+        </Reference>
      <Reference Include="System.Runtime.Serialization.Primitives">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Runtime.Serialization.Primitives/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Runtime.Serialization.Primitives.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Runtime.Serialization.Primitives/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Runtime.Serialization.Primitives.dll</HintPath>
         </Reference>
      <Reference Include="System.Security.Cryptography.Algorithms">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.Algorithms/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.Algorithms.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.Algorithms/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.Algorithms.dll</HintPath>
         </Reference>
      <Reference Include="System.Security.Cryptography.Encoding">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.Encoding/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.Encoding.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.Encoding/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.Encoding.dll</HintPath>
         </Reference>
      <Reference Include="System.Security.Cryptography.Primitives">
             <HintPath>../../CodeGenDependencies/net46/System.Security.Cryptography.Primitives.dll</HintPath>
         </Reference>
      <Reference Include="System.Security.Cryptography.X509Certificates">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.X509Certificates/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.X509Certificates.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.X509Certificates/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.X509Certificates.dll</HintPath>
         </Reference>
      <Reference Include="System.Text.Encoding.CodePages">
             <HintPath>../../CodeGenDependencies/net46/System.Text.Encoding.CodePages.dll</HintPath>
@@ -93,37 +96,50 @@
      <Reference Include="System.Threading.Tasks.Dataflow">
             <HintPath>../../CodeGenDependencies/net46/System.Threading.Tasks.Dataflow.dll</HintPath>
         </Reference>
+     <Reference Include="System.Threading.Tasks.Extensions">
+            <HintPath>../../CodeGenDependencies/net46/System.Threading.Tasks.Extensions.dll</HintPath>
+        </Reference>
      <Reference Include="System.Threading.Thread">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Threading.Thread/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Threading.Thread.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Threading.Thread/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Threading.Thread.dll</HintPath>
         </Reference>
      <Reference Include="System.ValueTuple">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.ValueTuple/v4.0_4.0.0.0__cc7b13ffcd2ddd51/System.ValueTuple.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.ValueTuple/v4.0_4.0.0.0__cc7b13ffcd2ddd51/System.ValueTuple.dll</HintPath>
         </Reference>
      <Reference Include="System.Xml.ReaderWriter">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.ReaderWriter/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.ReaderWriter.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.ReaderWriter/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.ReaderWriter.dll</HintPath>
         </Reference>
      <Reference Include="System.Xml.XmlDocument">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XmlDocument/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XmlDocument.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XmlDocument/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XmlDocument.dll</HintPath>
         </Reference>
      <Reference Include="System.Xml.XPath">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XPath/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XPath.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XPath/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XPath.dll</HintPath>
         </Reference>
      <Reference Include="System.Xml.XPath.XDocument">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XPath.XDocument/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XPath.XDocument.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XPath.XDocument/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XPath.XDocument.dll</HintPath>
+        </Reference>
+     <Reference Include="TwitterObservable">
+            <HintPath>../../CodeGenDependencies/net46/TwitterObservable.dll</HintPath>
         </Reference>
      <Reference Include="Ambrosia">
             <HintPath>../../CodeGenDependencies/net46/Ambrosia.exe</HintPath>
         </Reference>
-     <Reference Include="CRA.Worker">
-            <HintPath>../../CodeGenDependencies/net46/CRA.Worker.exe</HintPath>
-        </Reference>
     </ItemGroup>
  <ItemGroup>
-     <PackageReference Include="AmbrosiaLibCS" Version="2018.12.06.3" />
+     <PackageReference Include="AmbrosiaLibCS" Version="2018.12.12.1" />
+     <PackageReference Include="CRA" Version="2018.11.5.1" />
      <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
+     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
      <PackageReference Include="Mono.Options.Core" Version="1.0.0" />
+     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+     <PackageReference Include="Remote.Linq" Version="5.8.1" />
+     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
      <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
      <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
+     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
      <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0=" />
+    </ItemGroup>
+ <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+     <PackageReference Include="System.CodeDom" Version="4.5.0" />
+     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     </ItemGroup>
 </Project>
