--- a/InternalImmortals/PerformanceTest/GeneratedSourceFiles/PTAmbrosiaGeneratedAPINet46/latest/PTAmbrosiaGeneratedAPINet46.csproj
+++ b/InternalImmortals/PerformanceTest/GeneratedSourceFiles/PTAmbrosiaGeneratedAPINet46/latest/PTAmbrosiaGeneratedAPINet46.csproj
@@ -1,11 +1,8 @@
- <Project Sdk="Microsoft.NET.Sdk">
+﻿ <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net46</TargetFramework>
     </PropertyGroup>
  <ItemGroup>
-     <Reference Include="AmbrosiaLibCS">
-            <HintPath>../../CodeGenDependencies/net46/AmbrosiaLibCS.dll</HintPath>
-        </Reference>
      <Reference Include="Aqua">
             <HintPath>../../CodeGenDependencies/net46/Aqua.dll</HintPath>
         </Reference>
@@ -46,7 +43,7 @@
             <HintPath>../../CodeGenDependencies/net46/Remote.Linq.dll</HintPath>
         </Reference>
      <Reference Include="System.AppContext">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.AppContext/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.AppContext.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.AppContext/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.AppContext.dll</HintPath>
         </Reference>
      <Reference Include="System.Collections.Immutable">
             <HintPath>../../CodeGenDependencies/net46/System.Collections.Immutable.dll</HintPath>
@@ -55,7 +52,7 @@
             <HintPath>../../CodeGenDependencies/net46/System.Console.dll</HintPath>
         </Reference>
      <Reference Include="System.Diagnostics.FileVersionInfo">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Diagnostics.FileVersionInfo/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Diagnostics.FileVersionInfo.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Diagnostics.FileVersionInfo/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Diagnostics.FileVersionInfo.dll</HintPath>
         </Reference>
      <Reference Include="System.Diagnostics.StackTrace">
             <HintPath>../../CodeGenDependencies/net46/System.Diagnostics.StackTrace.dll</HintPath>
@@ -73,19 +70,19 @@
             <HintPath>../../CodeGenDependencies/net46/System.Reflection.Metadata.dll</HintPath>
         </Reference>
      <Reference Include="System.Runtime.Serialization.Primitives">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Runtime.Serialization.Primitives/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Runtime.Serialization.Primitives.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Runtime.Serialization.Primitives/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Runtime.Serialization.Primitives.dll</HintPath>
         </Reference>
      <Reference Include="System.Security.Cryptography.Algorithms">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.Algorithms/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.Algorithms.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.Algorithms/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.Algorithms.dll</HintPath>
         </Reference>
      <Reference Include="System.Security.Cryptography.Encoding">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.Encoding/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.Encoding.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.Encoding/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.Encoding.dll</HintPath>
         </Reference>
      <Reference Include="System.Security.Cryptography.Primitives">
             <HintPath>../../CodeGenDependencies/net46/System.Security.Cryptography.Primitives.dll</HintPath>
         </Reference>
      <Reference Include="System.Security.Cryptography.X509Certificates">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.X509Certificates/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.X509Certificates.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Security.Cryptography.X509Certificates/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Security.Cryptography.X509Certificates.dll</HintPath>
         </Reference>
      <Reference Include="System.Text.Encoding.CodePages">
             <HintPath>../../CodeGenDependencies/net46/System.Text.Encoding.CodePages.dll</HintPath>
@@ -94,32 +91,28 @@
             <HintPath>../../CodeGenDependencies/net46/System.Threading.Tasks.Dataflow.dll</HintPath>
         </Reference>
      <Reference Include="System.Threading.Thread">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Threading.Thread/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Threading.Thread.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Threading.Thread/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Threading.Thread.dll</HintPath>
         </Reference>
      <Reference Include="System.ValueTuple">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.ValueTuple/v4.0_4.0.0.0__cc7b13ffcd2ddd51/System.ValueTuple.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.ValueTuple/v4.0_4.0.0.0__cc7b13ffcd2ddd51/System.ValueTuple.dll</HintPath>
         </Reference>
      <Reference Include="System.Xml.ReaderWriter">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.ReaderWriter/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.ReaderWriter.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.ReaderWriter/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.ReaderWriter.dll</HintPath>
         </Reference>
      <Reference Include="System.Xml.XmlDocument">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XmlDocument/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XmlDocument.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XmlDocument/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XmlDocument.dll</HintPath>
         </Reference>
      <Reference Include="System.Xml.XPath">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XPath/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XPath.dll</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XPath/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XPath.dll</HintPath>
         </Reference>
      <Reference Include="System.Xml.XPath.XDocument">
-            <HintPath>C:/WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XPath.XDocument/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XPath.XDocument.dll</HintPath>
-        </Reference>
-     <Reference Include="Ambrosia">
-            <HintPath>../../CodeGenDependencies/net46/Ambrosia.exe</HintPath>
+            <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XPath.XDocument/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XPath.XDocument.dll</HintPath>
         </Reference>
      <Reference Include="CRA.Worker">
             <HintPath>../../CodeGenDependencies/net46/CRA.Worker.exe</HintPath>
         </Reference>
     </ItemGroup>
  <ItemGroup>
-     <PackageReference Include="AmbrosiaLibCS" Version="2018.12.14.1" />
      <PackageReference Include="CRA" Version="2018.11.5.1" />
      <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
      <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
@@ -130,6 +123,7 @@
      <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
      <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
      <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+     <ProjectReference Include="..\..\..\..\..\Clients\CSharp\AmbrosiaLibCS\AmbrosiaLibCS.csproj" />
      <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0=" />
     </ItemGroup>
 </Project>
