--- a/Samples/StreamingDemo/GeneratedSourceFiles/DashboardAPIGeneratedNet46/latest/DashboardAPIGeneratedNet46.csproj
+++ b/Samples/StreamingDemo/GeneratedSourceFiles/DashboardAPIGeneratedNet46/latest/DashboardAPIGeneratedNet46.csproj
@@ -3,6 +3,9 @@
         <TargetFramework>net46</TargetFramework>
     </PropertyGroup>
  <ItemGroup>
+     <Reference Include="AmbrosiaLibCS">
+            <HintPath>../../CodeGenDependencies/net46/AmbrosiaLibCS.dll</HintPath>
+        </Reference>
      <Reference Include="AnalyticsAPI">
             <HintPath>../../CodeGenDependencies/net46/AnalyticsAPI.dll</HintPath>
         </Reference>
@@ -117,9 +120,12 @@
      <Reference Include="TwitterObservable">
             <HintPath>../../CodeGenDependencies/net46/TwitterObservable.dll</HintPath>
         </Reference>
+     <Reference Include="Ambrosia">
+            <HintPath>../../CodeGenDependencies/net46/Ambrosia.exe</HintPath>
+        </Reference>
     </ItemGroup>
  <ItemGroup>
-     <PackageReference Include="AmbrosiaLibCS" Version="2019.1.2.1" />
+     <PackageReference Include="AmbrosiaLibCS" Version="2019.1.7.1" />
      <PackageReference Include="CRA" Version="2018.11.5.1" />
      <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
      <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
