--- a/InternalImmortals/PerformanceTest/GeneratedSourceFiles/PTAmbrosiaGeneratedAPINet46/latest/PTAmbrosiaGeneratedAPINet46.csproj
+++ b/InternalImmortals/PerformanceTest/GeneratedSourceFiles/PTAmbrosiaGeneratedAPINet46/latest/PTAmbrosiaGeneratedAPINet46.csproj
@@ -1,8 +1,11 @@
-﻿ <Project Sdk="Microsoft.NET.Sdk">
+ <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net46</TargetFramework>
     </PropertyGroup>
  <ItemGroup>
+     <Reference Include="AmbrosiaLibCS">
+            <HintPath>../../CodeGenDependencies/net46/AmbrosiaLibCS.dll</HintPath>
+        </Reference>
      <Reference Include="Aqua">
             <HintPath>../../CodeGenDependencies/net46/Aqua.dll</HintPath>
         </Reference>
@@ -108,12 +111,15 @@
      <Reference Include="System.Xml.XPath.XDocument">
             <HintPath>../../../../../../WINDOWS/Microsoft.Net/assembly/GAC_MSIL/System.Xml.XPath.XDocument/v4.0_4.0.0.0__b03f5f7f11d50a3a/System.Xml.XPath.XDocument.dll</HintPath>
         </Reference>
+     <Reference Include="Ambrosia">
+            <HintPath>../../CodeGenDependencies/net46/Ambrosia.exe</HintPath>
+        </Reference>
      <Reference Include="CRA.Worker">
             <HintPath>../../CodeGenDependencies/net46/CRA.Worker.exe</HintPath>
         </Reference>
     </ItemGroup>
  <ItemGroup>
-     <PackageReference Include="AmbrosiaLibCS" Version="2019.1.2.1" />
+     <PackageReference Include="AmbrosiaLibCS" Version="2019.1.7.1" />
      <PackageReference Include="CRA" Version="2018.11.5.1" />
      <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
      <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
