--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -16,8 +16,8 @@
     <add key="PerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Client\bin\x64\Release\net46" />
     <add key="PerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Server\bin\x64\Release\net46" />
 
-    <add key="AsyncPerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Client\bin\x64\Release\net46" />
-    <add key="AsyncPerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Server\bin\x64\Release\net46" />
+    <add key="AsyncPerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Client\bin\x64\Debug\net46" />
+    <add key="AsyncPerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Server\bin\x64\Debug\net46" />
 
     <add key="TestLocalInstanceExeWorkingDirectory" value="..\..\..\..\..\TestLocalService\bin\Release" />
     <add key="TestCMPDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Cmp" />
