HelloWorld adding Client3 + Updating .md + Adding conditional refrences to AmbrosiaLibCSDebug + Removing dll references from CodeGen + Regeneraring CodeGen code for Samples and InternalImmortals

--- a/Samples/HelloWorld/IClient3/IClient3.csproj
+++ b/Samples/HelloWorld/IClient3/IClient3.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AmbrosiaLibCS" Version="2018.12.14.1" />
+    <PackageReference Include="AmbrosiaLibCS" Version="2019.1.7.1" Condition="'$(Configuration)' == 'Release' " />
+    <PackageReference Include="AmbrosiaLibCSDebug" Version="2019.1.8.1" Condition="'$(Configuration)' == 'Debug'" />
   </ItemGroup>
 
 </Project>
