--- a/Samples/StreamingDemo/AnalyticsAPI/AnalyticsAPI.csproj
+++ b/Samples/StreamingDemo/AnalyticsAPI/AnalyticsAPI.csproj
@@ -18,7 +18,8 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AmbrosiaLibCS" Version="2019.1.7.1" />
+    <PackageReference Include="AmbrosiaLibCS" Version="2019.1.7.1" Condition="'$(Configuration)' == 'Release' " />
+    <PackageReference Include="AmbrosiaLibCSDebug" Version="2019.1.8.1" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="Trill">
       <Version>2018.3.2.1</Version>
     </PackageReference>
