--- a/Samples/HelloWorld/Client2/Client2.csproj
+++ b/Samples/HelloWorld/Client2/Client2.csproj
@@ -1,20 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.192" />
   </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
-    <ProjectReference Include="..\GeneratedSourceFiles\Client2InterfacesNetCore\latest\Client2InterfacesNetCore.csproj" />
+  <ItemGroup>
+    <ProjectReference Include="..\GeneratedSourceFiles\Client2Interfaces\latest\Client2Interfaces.csproj" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
-    <ProjectReference Include="..\GeneratedSourceFiles\Client2InterfacesNet46\latest\Client2InterfacesNet46.csproj" />
-  </ItemGroup>
-
 </Project>
