--- a/Samples/HelloWorld/IClient3/IClient3.csproj
+++ b/Samples/HelloWorld/IClient3/IClient3.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
     <Platforms>x64</Platforms>
   </PropertyGroup>
 
