--- a/Samples/StreamingDemo/Analytics/Analytics.csproj
+++ b/Samples/StreamingDemo/Analytics/Analytics.csproj
@@ -24,6 +24,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GeneratedSourceFiles\AnalyticsAPIGenerated\latest\AnalyticsAPIGenerated.csproj" />
     <ProjectReference Include="..\ServiceConfiguration\ServiceConfiguration.csproj" />
     <ProjectReference Include="..\TwitterObservable\TwitterObservable.csproj" />
   </ItemGroup>
