--- a/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGenerated/latest/AnalyticsAPIGenerated.csproj
+++ b/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGenerated/latest/AnalyticsAPIGenerated.csproj
@@ -1,6 +1,6 @@
-﻿ <Project Sdk="Microsoft.NET.Sdk">
+ <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net46</TargetFrameworks>
+        <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
     </PropertyGroup>
  <ItemGroup>
      <PackageReference Include="AmbrosiaLibCS" Version="0.8.2" Condition="'$(Configuration)' == 'Release' " />
@@ -14,12 +14,15 @@
      <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
      <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
      <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
-     <PackageReference Include="Trill" Version="2018.12.13.2" />
      <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
      <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0=" />
+     <PackageReference Include="Trill" Version="2018.3.2.1" />
     </ItemGroup>
  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
      <PackageReference Include="System.CodeDom" Version="4.5.0" />
      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     </ItemGroup>
+ <ItemGroup>
+   <ProjectReference Include="..\..\..\TwitterObservable\TwitterObservable.csproj" />
+ </ItemGroup>
 </Project>
