--- a/Samples/HelloWorld/GeneratedSourceFiles/ServerInterfaces/latest/ServerInterfaces.csproj
+++ b/Samples/HelloWorld/GeneratedSourceFiles/ServerInterfaces/latest/ServerInterfaces.csproj
@@ -1,24 +1,24 @@
-﻿ <Project Sdk="Microsoft.NET.Sdk">
+ <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp2.0;net46</TargetFrameworks>
+        <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
     </PropertyGroup>
  <ItemGroup>
      <PackageReference Include="AmbrosiaLibCS" Version="0.8.2" Condition="'$(Configuration)' == 'Release' " />
      <PackageReference Include="AmbrosiaLibCSDebug" Version="0.8.2" Condition="'$(Configuration)' == 'Debug'" />
-     <PackageReference Include="CRA" Version="2018.11.5.1" />
-     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
-     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
-     <PackageReference Include="Mono.Options.Core" Version="1.0.0" />
-     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-     <PackageReference Include="Remote.Linq" Version="5.8.1" />
-     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
-     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
-     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
-     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-     <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0=" />
+     <PackageReference Include="CRA" Version="2018.11.5.1"  />
+     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0"  />
+     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168"  />
+     <PackageReference Include="Mono.Options.Core" Version="1.0.0"  />
+     <PackageReference Include="Newtonsoft.Json" Version="11.0.2"  />
+     <PackageReference Include="Remote.Linq" Version="5.8.1"  />
+     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0"  />
+     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0"  />
+     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0"  />
+     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3"  />
+     <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0="  />
     </ItemGroup>
  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
-     <PackageReference Include="System.CodeDom" Version="4.5.0" />
-     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+     <PackageReference Include="System.CodeDom" Version="4.5.0"  />
+     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0"  />
     </ItemGroup>
 </Project>
