Add method to deploy both Immortal and ImmortalCoordinator

--- a/Clients/CSharp/AmbrosiaLibCS/AmbrosiaLibCS.csproj
+++ b/Clients/CSharp/AmbrosiaLibCS/AmbrosiaLibCS.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Ambrosia\Ambrosia\Ambrosia.csproj" />
+    <ProjectReference Include="..\..\..\ImmortalCoordinator\ImmortalCoordinator.csproj" />
   </ItemGroup>
 
   <ItemGroup>
