--- a/DevTools/UnsafeDeregisterInstance/UnsafeDeregisterInstance.csproj
+++ b/DevTools/UnsafeDeregisterInstance/UnsafeDeregisterInstance.csproj
@@ -7,6 +7,8 @@
     <RuntimeIdentifiers>win7-x64</RuntimeIdentifiers>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RootNamespace>UnsafeDeregisterInstance</RootNamespace>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>../../Ambrosia/Ambrosia.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch('$(TargetFramework)', '^net\d'))">
     <DefineConstants>NETFRAMEWORK</DefineConstants>
