--- a/InternalImmortals/UWPExample/GraphicalApp/packages.config
+++ b/InternalImmortals/UWPExample/GraphicalApp/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="aqua-core" version="4.5.1" targetFramework="net461" />
+  <package id="aqua-core-newtonsoft-json" version="4.5.1" targetFramework="net461" />
   <package id="CRA" version="2018.11.5.1" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="Remote.Linq" version="5.8.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="Remote.Linq" version="5.8.2" targetFramework="net461" />
+  <package id="Remote.Linq.Newtonsoft.Json" version="5.8.2" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="9.3.2" targetFramework="net461" />
 </packages>
