--- a/Samples/HelloWorld/ServerAPI/IServer.csproj
+++ b/Samples/HelloWorld/ServerAPI/IServer.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AmbrosiaLibCS" Version="1.0.11" Condition="'$(Configuration)' == 'Release' " />
-    <PackageReference Include="AmbrosiaLibCSDebug" Version="1.0.11" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.12" Condition="'$(Configuration)' == 'Release' " />
+    <PackageReference Include="Microsoft.Ambrosia.LibCSDebug" Version="1.0.12" Condition="'$(Configuration)' == 'Debug'" />
   </ItemGroup>
 
 </Project>
