--- a/Samples/StreamingDemo/DashboardAPI/DashboardAPI.csproj
+++ b/Samples/StreamingDemo/DashboardAPI/DashboardAPI.csproj
@@ -17,8 +17,8 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AmbrosiaLibCS" Version="1.0.11" Condition="'$(Configuration)' == 'Release' " />
-    <PackageReference Include="AmbrosiaLibCSDebug" Version="1.0.11" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.12" Condition="'$(Configuration)' == 'Release' " />
+    <PackageReference Include="Microsoft.Ambrosia.LibCSDebug" Version="1.0.12" Condition="'$(Configuration)' == 'Debug'" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TwitterObservable\TwitterObservable.csproj" />
