--- a/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGenerated/latest/AnalyticsAPIGenerated.csproj
+++ b/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGenerated/latest/AnalyticsAPIGenerated.csproj
@@ -3,8 +3,8 @@
     <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AmbrosiaLibCS" Version="1.0.11" Condition="'$(Configuration)' == 'Release' " />
-    <PackageReference Include="AmbrosiaLibCSDebug" Version="1.0.11" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.12" Condition="'$(Configuration)' == 'Release' " />
+    <PackageReference Include="Microsoft.Ambrosia.LibCSDebug" Version="1.0.12" Condition="'$(Configuration)' == 'Debug'" />
 	<PackageReference Include="Remote.Linq.Newtonsoft.Json" Version="5.8.2" />
     <PackageReference Include="Trill">
       <Version>2018.3.2.1</Version>
