--- a/InternalImmortals/PerformanceTest/GeneratedSourceFiles/PTAmbrosiaGeneratedAPI/latest/PTAmbrosiaGeneratedAPI.csproj
+++ b/InternalImmortals/PerformanceTest/GeneratedSourceFiles/PTAmbrosiaGeneratedAPI/latest/PTAmbrosiaGeneratedAPI.csproj
@@ -1,6 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net46;netcoreapp2.2</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.12" Condition="'$(Configuration)' == 'Release' " />
@@ -22,7 +22,7 @@
       <Version>2018.3.2.1</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.2'">
     <PackageReference Include="System.CodeDom">
       <Version>4.5.0</Version>
     </PackageReference>
