--- a/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGenerated/latest/AnalyticsAPIGenerated.csproj
+++ b/Samples/StreamingDemo/GeneratedSourceFiles/AnalyticsAPIGenerated/latest/AnalyticsAPIGenerated.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net46;netcoreapp2.2</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.12" Condition="'$(Configuration)' == 'Release' " />
@@ -8,7 +8,7 @@
     <PackageReference Include="Trill">
       <Version>2018.3.2.1</Version>
     </PackageReference>
-    <PackageReference Include="CRA" Version="2019.6.17.4" />
+    <PackageReference Include="Microsoft.CRA" Version="2019.8.8.2" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
@@ -22,7 +22,7 @@
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
     <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0=" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.2'">
     <PackageReference Include="System.CodeDom">
       <Version>4.5.0</Version>
     </PackageReference>
