--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -11,7 +11,7 @@
     <!-- The relative path of Log dir will be messed up (can't set relative path in process when calling exe from different location) -->
     <!-- can't get these relative paths working when logging from job.exe and server.exe -->
     <!-- <add key="TestLogOutputDirectory" value="..\..\..\..\..\AmbrosiaTest\AmbrosiaTest\Log" /> -->
-    <add key="TestLogOutputDirectory" value="D:\AmbrosiaTest\Log" />
+    <add key="TestLogOutputDirectory" value="C:\AmbrosiaTest\Log" />
 
     <add key="PerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Client\bin\x64\Release\net46" />
     <add key="PerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Server\bin\x64\Release\net46" />
