Updated to new CRA. Also required change from AddEndpoint to AddEndPointAsync

--- a/Samples/StreamingDemo/Dashboard/Dashboard.csproj
+++ b/Samples/StreamingDemo/Dashboard/Dashboard.csproj
@@ -18,7 +18,7 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AmbrosiaLibCS" Version="1.0.9" />
+    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.12" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GeneratedSourceFiles\DashboardAPIGenerated\latest\DashboardAPIGenerated.csproj" />
