--- a/Clients/CSharp/AmbrosiaCS/AmbrosiaCS.csproj
+++ b/Clients/CSharp/AmbrosiaCS/AmbrosiaCS.csproj
@@ -20,8 +20,10 @@
     <DefineConstants>NETCORE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+  <!--
     <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.13" Condition="'$(Configuration)' == 'Release' " />
     <PackageReference Include="Microsoft.Ambrosia.LibCSDebug" Version="1.0.13" Condition="'$(Configuration)' == 'Debug'" />
+    -->
     <PackageReference Include="Microsoft.CRA" Version="2019.10.21.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
@@ -123,5 +125,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <TargetPath>AmbrosiaCS.csproj</TargetPath>
     </ContentWithTargetPath>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AmbrosiaLibCS\AmbrosiaLibCS.csproj" />
   </ItemGroup>
 </Project>
