--- a/Samples/HelloWorld/GeneratedSourceFiles/Client2Interfaces/latest/Client2Interfaces.csproj
+++ b/Samples/HelloWorld/GeneratedSourceFiles/Client2Interfaces/latest/Client2Interfaces.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp2.2</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.2;net46</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Ambrosia.LibCS" Version="1.0.13" Condition="'$(Configuration)' == 'Release' " />
-    <PackageReference Include="Microsoft.Ambrosia.LibCSDebug" Version="1.0.13" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="Microsoft.CRA" Version="2019.10.21.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="2.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.168" />
@@ -29,5 +27,12 @@
     <PackageReference Include="System.Configuration.ConfigurationManager">
       <Version>4.5.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../../../ServerAPI/..%5C..%5C..%5CClients%5CCSharp%5CAmbrosiaLibCS%5CAmbrosiaLibCS.csproj" />
+    <ProjectReference Include="../../../ServerAPI/..%5C..%5C..%5CAmbrosia%5CAmbrosia%5CAmbrosia.csproj" />
+    <ProjectReference Include="../../../IClient2/..%5C..%5C..%5CClients%5CCSharp%5CAmbrosiaLibCS%5CAmbrosiaLibCS.csproj" />
+    <ProjectReference Include="../../../IClient2/..%5C..%5C..%5CAmbrosia%5CAmbrosia%5CAmbrosia.csproj" />
+    <ProjectReference Include="../../../../../bin/codegen/..%5CAmbrosiaLibCS%5CAmbrosiaLibCS.csproj" />
   </ItemGroup>
 </Project>
