Moved test files to VS 2019 and updated to NetCore 3.1

--- a/AmbrosiaTest/AmbrosiaTest/app.config
+++ b/AmbrosiaTest/AmbrosiaTest/app.config
@@ -16,6 +16,7 @@
     <add key="PerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Client\bin\x64\Release\net46" />
     <add key="PerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTestInterruptible\Server\bin\x64\Release\net46" />
 
+    <!-- NOTE: PT must be deployed as “Debug” due to “state machine changes and our magic library doesn’t work anymore” -->
     <add key="AsyncPerfTestJobExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Client\bin\x64\Debug\net46" />
     <add key="AsyncPerfTestServerExeWorkingDirectory" value="..\..\..\..\..\InternalImmortals\PerformanceTest\Server\bin\x64\Debug\net46" />
 
