Making Samples up to date and dixing a bunch of build errors

--- a/Samples/HelloWorld/Server/Server.csproj
+++ b/Samples/HelloWorld/Server/Server.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net46;netcoreapp2.2</TargetFrameworks>
-    <Platforms>x64</Platforms>
+    <TargetFrameworks>net46;netcoreapp3.1</TargetFrameworks>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
