--- a/Clients/CSharp/AmbrosiaCS/AmbrosiaCS.csproj
+++ b/Clients/CSharp/AmbrosiaCS/AmbrosiaCS.csproj
@@ -33,6 +33,7 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
     <PackageReference Update="Microsoft.NETCore.App=" Version="2.0.0=" />
     <PackageReference Include="Trill">
