--- a/Clients/CSharp/AmbrosiaLibCS/AmbrosiaLibCS.csproj
+++ b/Clients/CSharp/AmbrosiaLibCS/AmbrosiaLibCS.csproj
@@ -35,6 +35,7 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
