--- a/Samples/HelloWorld/Client2/Client2.csproj
+++ b/Samples/HelloWorld/Client2/Client2.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net46;netcoreapp2.2</TargetFrameworks>
-    <Platforms>AnyCPU;x64</Platforms>
+    <TargetFrameworks>net46;netcoreapp3.1</TargetFrameworks>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="15.8.192" />
