--- a/Samples/HelloWorld/Client3/Client3.csproj
+++ b/Samples/HelloWorld/Client3/Client3.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFrameworks>net46;netcoreapp3.1</TargetFrameworks>
     <Platforms>x64</Platforms>
   </PropertyGroup>
   
