--- a/Samples/HelloWorld/IClient1/IClient1.csproj
+++ b/Samples/HelloWorld/IClient1/IClient1.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp2.2</TargetFrameworks>
-    <Platforms>AnyCPU;x64</Platforms>
+    <TargetFrameworks>net46;netcoreapp3.1</TargetFrameworks>
+    <Platforms>x64</Platforms>
     <AssemblyName>IClient1</AssemblyName>
     <RootNamespace>IClient1</RootNamespace>
   </PropertyGroup>
