--- a/Samples/HelloWorld/IClient2/IClient2.csproj
+++ b/Samples/HelloWorld/IClient2/IClient2.csproj
@@ -1,8 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net46;netcoreapp2.2</TargetFrameworks>
-    <Platforms>AnyCPU;x64</Platforms>
+    <TargetFrameworks>net46;netcoreapp3.1</TargetFrameworks>
+    <Platforms>x64</Platforms>
+    <AssemblyName>IClient2</AssemblyName>
+    <RootNamespace>IClient2</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
